--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ MANIFEST
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
-
+auth_config.yml
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
